@@ -30,6 +30,7 @@ GtkWidget* create_window_main (void);
 void create_dialog_about (void);
 GtkWidget* create_window_listing (void);
 GtkWidget* create_window_start (void);
+GtkWidget* create_window_tutorial (void);
 GtkWidget* create_dialog_isymbol (void);
 GtkWidget* create_dialog_ireg (void);
 void activate_url (GtkAboutDialog *about, const gchar *url, gpointer data);
